--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
   "author": "2U",
   "license": "UNLICENSED",
   "devDependencies": {
-    
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
    
