--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Contact",
   "scripts": {
-    "dev": "",
-    "build": "",
+    "dev": "webpack-dev-server --open",
+    "build": "webpack",
     "start": ""
   },
   "author": "2U",
@@ -13,6 +13,6 @@
     "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
-   
+
   }
 }
